# ChangeLog for media-gfx/brscan4
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
  Add missing dependency on libusb.

  04 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
  Fix some install locations and permission bits.

  01 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
  Add configuration for sane.

*brscan4-0.4.2.4 (01 Dec 2014)

  01 Dec 2014; Ulrich Müller <ulm@gentoo.org> +brscan4-0.4.2.4.ebuild,
  +metadata.xml:
  Initial import. Ebuild contributed by me.
