@@ -1,2 +1,4 @@
 DIST brscan4-0.4.2-4.i386.rpm 67590 SHA256 d77a41626733ee9f4833f03182769f347778965f89dc833e899d311e312322e7 SHA512 2618d50a50c8910d9bff13abde8ad2e74a69009a148b14a97839fd9eb7714243c8821a87454296d86b1416ca1fd384f2a8f1db089b9f32663326fcc330bfeaa0 WHIRLPOOL 2c4b362391b5c834071c8de7ba901a95d062ae3f47fc8afd4909754b2d6feb519c8bf02b7c4488434a1080df85dc1e99dc81440c57930b2e4188020051631fa0
 DIST brscan4-0.4.2-4.x86_64.rpm 79321 SHA256 dd687c0398a718e9fe17ad4cb34fd5629615f25342efe77313189355493a25a5 SHA512 c02f8aaa0213a23c426f0b157562b8dd0b0024992548b6980fe282a7b60da691eff154fdd014e22f307e950a1c7d527ea19b5044afc8b136a683b0e3d4d85054 WHIRLPOOL 51100b0404e8a458724364f8171866bb07f10cd842e9ef723a3b171efd8e26b524c4f512df7bf83b95cc09eda6a1c36865ef078c9ab46de5fb38eb92d475ae80
+DIST brscan4-0.4.3-0.i386.rpm 67571 SHA256 6a0690cc5aaf2d025c5f20d9b266428dc849f73f0696d0f31772a15fd168e8f2 SHA512 8c81ff5af1a1020cfee44b5ab4f689fe28070ea0c439c62e60214b9e2b996973a6558d4cfc95ddf4f156d9de4f28c82acf966845e2f156a12071b073157ae6fc WHIRLPOOL 8aa3202744ee18a36cc03193b05e3ebd871c27c1e875fdc28e93662060c7ccf9aa1b142ed69f3f7ac98f3b7294c53b4092cbc76c1ea6395660a5bac2154b6c26
+DIST brscan4-0.4.3-0.x86_64.rpm 79345 SHA256 407d097da8aa32d02a2697954af1751fc6cc162e488b3984a4790190fcea6bee SHA512 5f0782d32fcfe6cccf9fb33ae298f8097e41867940780922e18047f2b358420ca96d4f25464476f3364953b057b1171482c0f5f670b6aed811f16fdd7bf16f60 WHIRLPOOL 7a06ff4669c29bc6748853d9594a7cbc53e337087c4a10b1f243b1303f5d6e234069c404f21c05ffc65ed6bfd721b7d264155af952643829c4632177a4ac0ac4
