@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/brscan4
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*brscan4-0.4.3.0 (04 Mar 2015)
+
+  04 Mar 2015; Ulrich Müller <ulm@gentoo.org> +brscan4-0.4.3.0.ebuild:
+  Version bump.
 
   04 Dec 2014; Ulrich Müller <ulm@gentoo.org> brscan4-0.4.2.4.ebuild:
   Add missing dependency on libusb.
